--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body{
     text-align: center; 
 }
 .secound-part h1{
+    margin-top: 10%;
     font-size: 52px;
 }
 .secound-part p{
@@ -72,7 +73,7 @@ body{
     align-items: center;
     background: 	whitesmoke;
     margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
     margin-left: 8%;
     font-size: 30px;   
     padding: 30px;
@@ -103,6 +104,57 @@ p{
     color: white;
     font-size: 25px;
     font-weight: 600;
-
 }
 /* Secound section work end here */
+
+
+/* hird section work start here */
+.third-part{
+    text-align: center;
+}
+.third-part h1{
+    margin-top: 10%;
+    font-size: 52px;
+}
+.third-part p{
+    font-size: 20px;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+.third-part2{
+    display: flex;
+    text-align: center;
+    align-items: center;      
+}
+.third-part2 h2{
+    margin-top: 10%;
+    font-size: 30px; 
+}
+.first{
+    background-color: navajowhite;
+    margin-top: 5%;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding: 5%;
+    margin-bottom: 10%;
+    border-radius: 10px;
+}
+#id-no1{
+background-image: url(icons/food.png);
+background-repeat: no-repeat;
+background-position: 50% 50px;
+
+}
+#id-no2{
+    background-color:cyan;  
+    background-image: url(icons/shelter.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50px;
+}
+#id-no3{
+    background-color: lightpink;
+    background-image: url(icons/Frame-1.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50px;
+}
+/* Third section work end here */
