--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ background-position: 50% 50px;
 }
 .fourth-1 button{
     margin-left: 35%;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
     align-items: center;
     text-align: center;
     border: none;
@@ -206,7 +206,7 @@ background-position: 50% 50px;
     padding-top: 20%;
 }
 .fifth p{
-    padding: 5%;
+    padding: 3%;
 }
 .fifth-1{
     width: 100%;
@@ -242,7 +242,7 @@ background-position: 50% 50px;
     padding-top: 18%;
 }
 .six p{
-    padding: 5%;
+    padding: 3%;
 }
 .six-1{
     width: 100%;
@@ -267,3 +267,38 @@ background-position: 50% 50px;
     font-weight: 600;
 }
 /* sixth section work end here  */
+
+/* <!-- seven section work start here --> */
+.seven{
+    display: flex;
+    margin-bottom: 15%;
+    padding-left: 1%;
+}
+.seven h1{
+    text-align: center;
+    padding-top: 10%;
+}
+.seven p{
+    padding: 3%;
+}
+.seven-1{
+    width: 100%;
+}
+.seven-1 img{
+    width: 70%;
+    padding-left: 20%;
+}
+.seven-1 button{
+    margin-left: 35%;
+    margin-bottom: 5%;
+    align-items: center;
+    text-align: center;
+    border: none;
+    background-color:red;
+    padding: 20px 20px;
+    border-radius: 10px;
+    color: white;
+    font-size: 25px;
+    font-weight: 600;
+}
+/* seven section work end here */
